--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_NAME=DB_NAME
-DB_USER=USERNAME
-DB_PASSWORD=DB_PASSWORD
+DB_NAME=ebazar
+DB_USER=postgres
+DB_PASSWORD=admin
 DB_HOST=localhost
 DB_PORT=5432
 
